kanboard/kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app
  namespace: kanboard
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: kanboard.funkypenguin.co.nz
    http:
      paths:
      - backend:
          serviceName: app
          servicePort: 80
